--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       
       
-      <link href="/CSS/mainStyle.css" rel="stylesheet">
-      <link href="/CSS/itemStyle.css" rel="stylesheet">
+      <link href="CSS/mainStyle.css" rel="stylesheet">
+      <link href="CSS/itemStyle.css" rel="stylesheet">
 
       <title>Risk of Rain 2 Calculator</title>
 </head>
@@ -69,8 +69,8 @@
             <div class="draggable-item" draggable="true"><img class="item common" src="item_icons/common/repulsion_armor_plate.png"></div>
       </div>
 
-      <script src="/JS/characters.js"></script>
-      <script src="/JS/items.js"></script>
-      <script src="/JS/mainScript.js" defer></script>
+      <script src="JS/characters.js"></script>
+      <script src="JS/items.js"></script>
+      <script src="JS/mainScript.js" defer></script>
 </body>
 </html>
