Fixed - Item backgrounds

--- a/index.html
+++ b/index.html
@@ -65,8 +65,7 @@
 
       <h1>Item List</h1>
       <div class="item-list" id="site_items">
-            <div class="draggable-item" draggable="true"><img class="item common" src="item_icons/common/soldier_syringe.png"></div>
-            <div class="draggable-item" draggable="true"><img class="item common" src="item_icons/common/repulsion_armor_plate.png"></div>
+            <div class="draggable-item" draggable="true"><img class="item lunar"></div>
       </div>
 
       <script src="JS/characters.js"></script>
