--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
       <h1>Item List</h1>
       <div class="item-list" id="site_items">
-            <div class="draggable-item" draggable="true"><img class="item lunar"></div>
+            <div class="draggable-item" draggable="true"><img class="item lunar" src="itemIcon/debugIcons/item.png"></div>
       </div>
 
       <script src="JS/characters.js"></script>
