Dragging Fix, Inventory with Lock, Debug Icons

--- a/index.html
+++ b/index.html
@@ -65,11 +65,12 @@
 
       <h1>Item List</h1>
       <div class="item-list" id="site_items">
-            <div class="draggable-item" draggable="true"><img class="item lunar" src="itemIcon/debugIcons/item.png"></div>
+            <div class="draggable-item" draggable="true"><img class="item debug" src="itemIcons/debugIcons/item.png"></div>
       </div>
+      
 
       <script src="JS/characters.js"></script>
       <script src="JS/items.js"></script>
-      <script src="JS/mainScript.js" defer></script>
+      <script src="JS/mainScript.js"></script>
 </body>
 </html>
