--- a/index.html
+++ b/index.html
@@ -43,21 +43,8 @@
             <h3 id="character-armor"></h3>
       </div>
 
-      <div>
-            <h1 id="character-name"></h1>
-            <hr class="character-stats-hr">
-            <img id="character_image">
-            <h2 id="character-type"></h2>
-            <h3 id="character-health"></h3>
-            <h3 id="character-damage"></h3>
-            <h3 id="character-speed"></h3>
-            <h3 id="character-armor"></h3>
-      </div>
-
-
-
       <h1>Inventory</h1>
-      <div class="item-list" id="player_items">
+      <div class="item-list playerInventory" id="player_items">
             
       </div>
 
