--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
       <h1>Item List</h1>
       <div class="item-list" id="site_items">
-            <div class="draggable-item" id="debug" draggable="true"><img class="item debug" src="itemIcons/debugIcons/item.png"></div>
+            <div class="draggable-item" id="debug" draggable="true"><img class="item debug" src="itemIcons/debugIcons/item.png"><input type="number" class="item-amount-input" min="1" value="1"></div>
       </div>
       
 
