Item amount selection

--- a/index.html
+++ b/index.html
@@ -60,7 +60,10 @@
 
       <h1>Item List</h1>
       <div class="item-list" id="site_items">
-            <div class="draggable-item" id="debug" draggable="true"><img class="item debug" src="itemIcons/debugIcons/item.png"><input type="number" class="item-amount-input" min="1" value="1"></div>
+            <div class="draggable-item" id="debug" draggable="true">
+                  <img class="item debug" src="itemIcons/debugIcons/item.png">
+                  <div class="item-amount-input-div"><input type="number" id="debug-item-amount" class="item-amount-input" min="1" value="1"></div>
+            </div>
       </div>
       
 
