Level updating, Speed Modifier working

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             <h3 id="character-health"></h3>
             <h3 id="character-damage"></h3>
             <h3 id="character-speed"></h3>
+            <h3 id="character-sprint"></h3>
             <h3 id="character-armor"></h3>
       </div>
 
