New Items, Stat Consts devided into separated files

--- a/index.html
+++ b/index.html
@@ -45,6 +45,25 @@
             <h3 id="character-armor"></h3>
       </div>
 
+      <div>
+            <h1 id="on-hit-effect">Effects on hit enemy</h1>
+            <br>
+            <h3 id="on-hit-bleed-chance"></h3>
+            <h3 id="on-hit-crit-chance"></h3>
+      </div>
+
+      <div>
+            <h1 id="on-kill-effect">Effects on kill</h1>
+            <br>
+            <h3 id="on-kill-barrier"></h3>
+      </div>
+
+      <div>
+            <h1 id="on-hit-effect-enemy">Effects on hit player</h1>
+            <br>
+            <h3 id="on-hit-damage-block-chance"></h3>
+      </div>
+
       <h1>Inventory</h1>
       <div class="item-list playerInventory" id="player_items">
             
@@ -63,6 +82,11 @@
 
       <script src="JS/characters.js"></script>
       <script src="JS/items.js"></script>
+
+      <script src="JS/onHitEnemyConst"></script>
+      <script src="JS/onHitPlayerConst"></script>
+      <script src="JS/onKillPlayerConst.js"></script>
+
       <script src="JS/mainScript.js"></script>
       
       <script>
