--- a/index.html
+++ b/index.html
@@ -31,39 +31,39 @@
             <option id="scavenger"        class="select-scavenger       character-select-option">     Scavenger   </option>
       </select>
 
+      <div class="stat-display">
+            <div>
+                  <h1 id="character-name"></h1>
+                  <hr class="character-stats-hr">
+                  <img id="character_image">
+                  <h3>Player Level: <input id="player-level" type="number" min="1" value="1"></h3>
+                  <h2 id="character-type"></h2>
+                  <h3 id="character-health"></h3>
+                  <h3 id="character-damage"></h3>
+                  <h3 id="character-speed"></h3>
+                  <h3 id="character-sprint"></h3>
+                  <h3 id="character-armor"></h3>
+            </div>
 
-      <div>
-            <h1 id="character-name"></h1>
-            <hr class="character-stats-hr">
-            <img id="character_image">
-            <h3>Player Level: <input id="player-level" type="number" min="1" value="1"></h3>
-            <h2 id="character-type"></h2>
-            <h3 id="character-health"></h3>
-            <h3 id="character-damage"></h3>
-            <h3 id="character-speed"></h3>
-            <h3 id="character-sprint"></h3>
-            <h3 id="character-armor"></h3>
+            <div>
+                  <h1 id="on-hit-effect">Effects on hit enemy</h1>
+                  <br>
+                  <h3 id="on-hit-bleed-chance"></h3>
+                  <h3 id="on-hit-crit-chance"></h3>
+            </div>
+
+            <div>
+                  <h1 id="on-kill-effect">Effects on kill</h1>
+                  <br>
+                  <h3 id="on-kill-barrier"></h3>
+            </div>
+
+            <div>
+                  <h1 id="on-hit-effect-enemy">Effects on hit player</h1>
+                  <br>
+                  <h3 id="on-hit-damage-block-chance"></h3>
+            </div>
       </div>
-
-      <div>
-            <h1 id="on-hit-effect">Effects on hit enemy</h1>
-            <br>
-            <h3 id="on-hit-bleed-chance"></h3>
-            <h3 id="on-hit-crit-chance"></h3>
-      </div>
-
-      <div>
-            <h1 id="on-kill-effect">Effects on kill</h1>
-            <br>
-            <h3 id="on-kill-barrier"></h3>
-      </div>
-
-      <div>
-            <h1 id="on-hit-effect-enemy">Effects on hit player</h1>
-            <br>
-            <h3 id="on-hit-damage-block-chance"></h3>
-      </div>
-
       <h1>Inventory</h1>
       <div class="item-list playerInventory" id="player_items">
             
