--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <link href="CSS/mainStyle.css" rel="stylesheet">
       <link href="CSS/itemStyle.css" rel="stylesheet">
 
-      <title>Risk of Rain 2 Calculator</title>
+      <title>Risk of Math</title>
 </head>
 <body>
       <label for="character-select">Select your survivor</label>      <select id="character-select" class="character-select">
