All Whites Done!

--- a/index.html
+++ b/index.html
@@ -51,12 +51,16 @@
                   <br>
                   <h3 id="on-hit-bleed-chance"></h3>
                   <h3 id="on-hit-crit-chance"></h3>
+                  <h3 id="on-hit-bomb-chance"></h3>
+                  <h3 id="on-hit-stun-chance"></h3>
             </div>
 
             <div>
                   <h1 id="on-kill-effect">Effects on kill</h1>
                   <br>
                   <h3 id="on-kill-barrier"></h3>
+                  <h3 id="on-kill-gas"></h3>
+                  <h3 id="on-kill-healing-orb"></h3>
             </div>
 
             <div>
@@ -64,6 +68,7 @@
                   <br>
                   <h3 id="on-hit-damage-block-chance"></h3>
                   <h3 id="on-hit-pennies-amount"></h3>
+                  <h3 id="on-hit-medkit"></h3>
             </div>
       </div>
       <div class="inventories">
