--- a/index.html
+++ b/index.html
@@ -38,7 +38,13 @@
                   <img id="character_image">
                   <h3>Player Level: <input id="player-level" type="number" min="1" value="1"></h3>
                   <h2 id="character-type"></h2>
-                  <h3 id="character-health"></h3>
+                  <div>
+                        <h3 id="character-health" class="health-number"></h3>
+                        <div id="health-bar">
+                        <div id="health-bar-health"></div>
+                        <div id="health-bar-shield"></div>
+                        <div id="health-bar-perma"></div>
+                  </div> </div>
                   <h3 id="character-regen"></h3>
                   <h3 id="character-damage"></h3>
                   <h3 id="character-speed"></h3>
